Fixed layout alignment issue in Full Event View

--- a/resources/css/eventhub.css
+++ b/resources/css/eventhub.css
@@ -24,6 +24,10 @@ a:active {
   color: #005580;
 }
 
+.full-event{
+		margin-left: 5px;
+}
+
 .title {
 	border-bottom: 1px solid #eeeeee;
 	margin-bottom: 5px;
